--- a/src/sentry/templates/sentry/integrations/slack-reauth-details.html
+++ b/src/sentry/templates/sentry/integrations/slack-reauth-details.html
@@ -6,90 +6,90 @@
 {% block wrapperclass %}narrow auth{% endblock %}
 {% block modal_header_signout %}{% endblock %}
 
+
 {% block title %}{% trans "Slack Migration" %} | {{ block.super }}{% endblock %}
 
 {% block css %}
   <style>
     li {
         list-style-type: none;
+        margin: 5px;
     }
     .channel-name {
-        margin-left: 20px;
-        font-size: 80%;
+        margin-left: 10px;
     }
     div {
         padding:10px 0px;
     }
     h6 {
-        margin-bottom:3px;
+        margin: 0px 5px;
     }
     .section-info {
-        font-size: 80%;
+        font-size: 90%;
+        margin-top: 5px;
+    }
+    .private :last-child {
+        margin-top: 20px;
     }
   </style>
+
+
 {% endblock %}
 
 
 {% block main %}
-{% if is_loading %}
-    <h3>Slack Migration: Alert Rule Audit</h3>
-    <p>next we will verify le channels.. please note that this may take a while</p>
-    <div class="form-actions clearfix">
-        <div class="pull-right">
-            <a class="btn btn-primary" href="{{ next_url }}">{% trans "verify" %}</a>
-        </div>
-    </div>
-{% else %}
-    <h3>Slack Migration: Alert Rule Audit</h3>
-        {% if private or no_permission or not_found %}
-            <p class="alert alert-block flex section-info">
-                <i class="icon icon-exclamation"></i>
-                {% trans "Oop, looks like there are some channels that might need action post-migration" %}
+    <h3>Authorize New Sentry Slack App</h3>
+    <div class="private">
+        {% if private %}
+            <strong>We've found some private channels being used in your alert rules:</strong>
+            <p class="section-info">
+                {% blocktrans %}
+                    What does this mean? Am I doomed? No, you're not doomed. All this means is that once you're done
+                    authorizing the new Slack app, you'll need to add the Sentry bot to each of these channels to
+                    ensure that the bot has access to alert you about your Sentry errors!
+                {% endblocktrans %}
             </p>
-        {% endif %}
-
-        <div>
-            {% if private %}
-                <h6><strong>Private Channels</strong></h6>
-                <p class="section-info">
-                    {% trans "For private channels, once you migrate, you'll need to make sure to add the Sentry bot to these channels in order for your alert rules to continue to work." %}
-                </p>
-            {% endif %}
             {% for channel in private %}
                 <li class="channel-name">{{channel.name}} </li>
             {% endfor %}
+            <p class="section-info">
+                {% blocktrans %}
+                    What if I forget what channels are used the moment I leave this screen? Don't worry, after the
+                    authentication step, we'll send your private channels one last message from the legacy app, reminding
+                    you to add the new Sentry bot.
+                {% endblocktrans %}
+            </p>
+        {% endif %}
+
+    </div>
+
+    <div>
+        {% if no_permission %}
+            <strong>Missing or Unauthorized Channels</strong>
+            <p class="section-info">
+                {% trans "These channels were found to be missing or unauthorized by the current Slack integration. If they are private channels, you'll have make sure to add the Sentry bot to the channels after migration. Otherwise you may want update your alert rules to use a different channel." %}
+            </p>
+        {% endif %}
+        {% for channel in no_permission %}
+            <li class="channel-name">{{channel.name}} </li>
+        {% endfor %}
+        {% for channel in not_found %}
+            <li class="channel-name">{{channel.name}} </li>
+        {% endfor %}
+    </div>
+
+    <div>
+        {% if not private and not no_permission and not not_found %}
+        <h6><strong>Next Steps</strong></h6>
+            <p class="section-info"> You are good to go! Click "Next" to start the re-authentication flow!</p>
+        {% endif %}
+
+
+    </div>
+
+    <div class="form-actions clearfix">
+        <div class="pull-right">
+            <a class="btn btn-primary" href="{{ next_url }}">{% trans "Start Authorization" %}</a>
         </div>
-
-        <div>
-            {% if no_permission %}
-                <h6><strong>Missing or Unauthorized Channels</strong></h6>
-                <p class="section-info">
-                    {% trans "These channels were found to be missing or unauthorized by the current Slack integration. If they are private channels, you'll have make sure to add the Sentry bot to the channels after migration. Otherwise you may want update your alert rules to use a different channel." %}
-                </p>
-            {% endif %}
-            {% for channel in no_permission %}
-                <li class="channel-name">{{channel.name}} </li>
-            {% endfor %}
-            {% for channel in not_found %}
-                <li class="channel-name">{{channel.name}} </li>
-            {% endfor %}
-        </div>
-
-        <div>
-            {% if private or no_permission or not_found %}
-            <h6><strong>Next Steps</strong></h6>
-                <p class="section-info"> Not to worry, something something about docs information i dk. Click "Next" to start the re-authentication flow!</p>
-            {% else %}
-             <p class="section-info"> You are good to go! Click "Next" to start the re-authentication flow!</p>
-            {% endif %}
-
-
-        </div>
-
-        <div class="form-actions clearfix">
-            <div class="pull-right">
-                <a class="btn btn-primary" href="{{ next_url }}">{% trans "Next" %}</a>
-            </div>
-        </div>
-{% endif %}
+    </div>
 {% endblock %}
