frontend passing thru integration_id

--- a/src/sentry/templates/sentry/integrations/slack-reauth-introduction.html
+++ b/src/sentry/templates/sentry/integrations/slack-reauth-introduction.html
@@ -111,7 +111,7 @@
          {% endblocktrans %}
      </p>
 
-    <div id="loader">Loading...</div>
+    <div id="loader"></div>
     <div class="form-actions clearfix">
         <div class="pull-right">
             <a class="btn btn-primary" onclick="loading()" href="{{ next_url }}">{% trans "Continue" %}</a>
